fixes#1 menu problems solved, a tag solved

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>Újrahasznosítás</h1>
             <nav class="navbar navbar-expand-lg navbar-dark bg-green">
-                <a class="navbar-brand" href="#">Navigáció</a>
+                <a class="navbar-brand" href="#">Újrahasznosítás</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -56,7 +55,7 @@
                         Helyezze a szemetet a kijelölt helyre!</p>
                         <p>Nézze meg a naptárat:</p>
                     </div>
-                    <p class="details"><a href="" aria-label="Elolvasom">Több >></a></p>
+                    <p class="details"><a href="#" aria-label="Elolvasom">Tovább >></a></p>
                 </article>
                 <!--/Article wrapp-->
                 <!--Article wrapp-->
@@ -73,7 +72,7 @@
                             után is! </p>
                         <p>Tudja meg hol keressen minket:</p>
                     </div>
-                        <p class="details"><a href="" aria-label="Elolvasom">Több >></a></p>
+                    <p class="details"><a href="#" aria-label="Elolvasom">Tovább >></a></p>>
                 </article>
                 <!--/Article wrapp-->
                 <!--Article wrapp-->
@@ -89,7 +88,7 @@
                             terhelésről. Itt és most tudunk tenni a gyermekeink jövőjéért, a Mi jövőnkért!</p>
                         <p>Hogy legyen hol élni!</p>
                     </div>
-                        <p class="details"><a href="" aria-label="Elolvasom">Több >></a></p>
+                        <p class="details"><a href="#" aria-label="Elolvasom">Tovább >></a></p>
                 </article>
                 <!--/Article wrapp-->
 
@@ -119,8 +118,8 @@
                  alt="CSS ist valide!" />
                 </a>
             </p>
-            <a href="" class="insta"></a>
-            <a href="" class="face"></a> 
+            <a href="#" class="insta"></a>
+            <a href="#" class="face"></a> 
         </footer>
     </div>
 <!--Bootstrap JS-->
