--- a/what.html
+++ b/what.html
@@ -12,9 +12,8 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>Újrahasznosítás</h1>
             <nav class="navbar navbar-expand-lg navbar-dark bg-green">
-                <a class="navbar-brand" href="#">Navigáció</a>
+                <a class="navbar-brand" href="#">Újrahasznosítás</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -250,8 +249,8 @@
                  alt="CSS ist valide!" />
                 </a>
             </p>
-            <a href="" class="insta"></a>
-            <a href="" class="face"></a> 
+            <a href="#" class="insta"></a>
+            <a href="#" class="face"></a> 
         </footer>
     </div>
 <!--Bootstrap JS-->
