--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,8 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>Újrahasznosítás</h1>
             <nav class="navbar navbar-expand-lg navbar-dark bg-green">
-                <a class="navbar-brand" href="#">Navigáció</a>
+                <a class="navbar-brand" href="#">Újrahasznosítás</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -40,44 +39,47 @@
         <main> 
             <h1><span> „Kérdése van?”</span></h1>
             <!--Form-->
-            <div class="form-wrapp">
-<!-- Default form contact -->
-<form class="text-center border border-light p-5" action="#!">
+            <div class="row">
+              <div class="col-md-2"></div>
+              <div class="form-wrapp col-md-8">
+                <!-- Default form contact -->
+                <form class="text-center border border-light p-5" action="#!">
 
-  <p class="h4 mb-4">Írjon bátran, csapatunk segít!</p>
+                  <p class="h4 mb-4">Írjon bátran, csapatunk segít!</p>
 
-  <!-- Name -->
-  <input type="text"  class="form-control mb-4" placeholder="Név">
+                  <!-- Name -->
+                  <input type="text"  class="form-control mb-4" placeholder="Név">
 
-  <!-- Email -->
-  <input type="email"  class="form-control mb-4" placeholder="E-mail">
+                  <!-- Email -->
+                  <input type="email"  class="form-control mb-4" placeholder="E-mail">
 
-  <!-- Subject -->
-  <label>Tárgy</label>
-  <select class="browser-default custom-select mb-4">
-      <option value="" disabled>Válasszon:</option>
-      <option value="1" selected>Visszajelzés</option>
-      <option value="2">Érdeklődés</option>
-      <option value="3">Segítség! Mit és hogyan?</option>
-      <option value="4">Csatlakoznék!</option>
-  </select>
+                  <!-- Subject -->
+                  <label>A Levél tárgya:</label>
+                  <select class="browser-default custom-select mb-4">
+                      <option value="" disabled>Válasszon:</option>
+                      <option value="1" selected>Visszajelzés</option>
+                      <option value="2">Érdeklődés</option>
+                      <option value="3">Segítség! Mit és hogyan?</option>
+                      <option value="4">Csatlakoznék!</option>
+                  </select>
 
-  <!-- Message -->
-  <div class="form-group">
-      <textarea class="form-control rounded-0" rows="3" placeholder="Üzenet:"></textarea>
-  </div>
+                  <!-- Message -->
+                  <div class="form-group">
+                      <textarea class="form-control rounded-0" rows="3" placeholder="Üzenet:"></textarea>
+                  </div>
 
-  <!-- Copy -->
-  <div class="custom-control custom-checkbox mb-4">
-      <input type="checkbox" class="custom-control-input" id="masolat">
-      <label class="custom-control-label" for="masolat">Kérek egy másolatot a címemre!</label>
-  </div>
+                  <!-- Copy -->
+                  <div class="custom-control custom-checkbox mb-4">
+                      <input type="checkbox" class="custom-control-input" id="masolat">
+                      <label class="custom-control-label" for="masolat">Kérek egy másolatot a címemre!</label>
+                  </div>
 
-  <!-- Send button -->
-  <button class="btn btn-info btn-block" type="submit">Elküld</button>
+                  <!-- Send button -->
+                  <button class="btn btn-info btn-block" type="submit">Elküld</button>
 
-</form>
-<!-- Default form contact -->
+                </form>
+                <!-- Default form contact -->
+              </div>
             </div>
             <!--/Form-->
              <!--/Main wrapp-->
@@ -95,8 +97,8 @@
                  alt="CSS ist valide!" />
                 </a>
             </p>
-            <a href="" class="insta"></a>
-            <a href="" class="face"></a> 
+            <a href="#" class="insta"></a>
+            <a href="#" class="face"></a> 
         </footer>
     </div>
 <!--Bootstrap JS-->
