--- a/hazmat.html
+++ b/hazmat.html
@@ -12,9 +12,8 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>Újrahasznosítás</h1>
             <nav class="navbar navbar-expand-lg navbar-dark bg-green">
-                <a class="navbar-brand" href="#">Navigáció</a>
+                <a class="navbar-brand" href="#">Újrahasznosítás</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -37,11 +36,12 @@
                 </div>
               </nav>
         </header>
-        <main> 
-            <h1><span> „Van amit ésszel kell!”</span></h1>
-            <!--Main wrapp-->
-            <div class="what-container">
-                    <!--Article wrapp-->
+        <div class="site-container"></div>
+            <main> 
+                <h1><span> „Van amit ésszel kell!”</span></h1>
+                <!--Main wrapp-->
+                <div class="what-container">
+                       <!--Article wrapp-->
                     <article id="olaj">
                         <h2>Olaj és zsír</h2>
                         <div class="what-wrap">
@@ -76,7 +76,7 @@
                     </article>
                     <!--/Article wrapp--> 
                     <!--Article wrapp-->
-                    <article>
+                    <article id="battery">
                         <h2>Akkumlátor és száraz elem</h2>
                         <div class="what-wrap">
                             <div class="picture"> 
@@ -108,7 +108,7 @@
                     </article>
                     <!--/Article wrapp--> 
                     <!--Article wrapp-->
-                    <article>
+                    <article id="medicine">
                         <h2>Gyógyszer</h2>
                         <div class="what-wrap">
                             <div class="picture"> 
@@ -149,7 +149,8 @@
                         </div>
                     </article>
                     <!--/Article wrapp--> 
-            </div>
+               </div>
+        </div>
              <!--/Main wrapp-->
              <div class="sticky what-sticky"><a href="#top" aria-label="Oldal tetejére">
                 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-bar-up" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -165,8 +166,8 @@
                  alt="CSS ist valide!" />
                 </a>
             </p>
-            <a href="" class="insta"></a>
-            <a href="" class="face"></a> 
+            <a href="#" class="insta"></a>
+            <a href="#" class="face"></a> 
         </footer>
     </div>
 <!--Bootstrap JS-->
